Alignment Fix for running icon
:Release Notes:
Alignment Fix for running icon

:Detailed Notes:
In RTL modified css property from 0% to 45% for right
property.

:Testing Performed:
Verified locally

:QA Notes:
NA

:Issues Addressed:
[WRP-9218] [OSE -RPI4]: The dot which appears below the
           opened app is not centered when language
		   is set to Arabic

--- a/src/components/AppIcon/AppIcon.module.less
+++ b/src/components/AppIcon/AppIcon.module.less
@@ -107,7 +107,7 @@ div.icon_cnt_s:first-child{
     top: auto;
     bottom: -0.8rem;
     left: 45%;
-    right: 0;
+    right: 45%;
     width: 0.5rem;
     height: 0.5rem;
     background: #D9D9D9;
